<resources>
    <string name="app_name">News App</string>
    <string name="internet_not_found">No internet connection</string>
    <string name="more_news">Click for more news!</string>
    <string name="no_news">No news found</string>
    <string name="no_internet">no internet connection</string>

    <!-- Strings related to menu -->
    <string name="categories">Categories</string>
    <string name="politics">Politics</string>
    <string name="technology">Technology</string>
    <string name="education">Education</string>
    <string name="business">Business</string>
    <string name="android">Android</string>
    <string name="sport">Sport</string>
    <string name="all">All</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="food">Food</string>
    <string name="books">Books</string>
    <string name="health">Health</string>
    <string name="fashion">Fashion</string>
    <string name="news">News</string>
    <string name="uk_news">UK News</string>
    <string name="us_news">US News</string>
    <string name="australia_news">Australia News</string>

</resources>