<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/file"
        android:title="@string/categories">
        <!-- "file" submenu -->
        <menu>
            <item android:id="@+id/politics"
                android:title="@string/politics"
                android:icon="@drawable/ic_people_black_24dp"/>

            <item android:id="@+id/technology"
                android:title="@string/technology"
                android:icon="@drawable/ic_lightbulb_outline_black_24dp"/>

            <item android:id="@+id/education"
                android:title="@string/education"
                android:icon="@drawable/ic_book_black_24dp"/>

            <item android:id="@+id/business"
                android:title="@string/business"
                android:icon="@drawable/ic_attach_money_black_24dp"/>

            <item android:id="@+id/android"
                android:title="@string/android"
                android:icon="@drawable/ic_android_black_24dp"/>

            <item android:id="@+id/sport"
                android:title="@string/sport"
                android:icon="@drawable/ic_directions_bike_black_24dp"/>

            <item android:id="@+id/all"
                android:title="@string/all"
                android:icon="@drawable/ic_event_black_24dp"/>

        </menu>
    </item>

    <item android:title="@string/lifestyle">
        <menu>
            <item android:title="@string/food"
                android:id="@+id/food"/>

            <item android:title="@string/books"
                android:id="@+id/books"/>

            <item android:title="@string/health"
                android:id="@+id/health"/>

            <item android:title="@string/fashion"
                android:id="@+id/fashion"/>

        </menu>
    </item>

    <item android:title="@string/news">
        <menu>
            <item android:title="@string/uk_news"
                android:id="@+id/uknews"/>

            <item android:title="@string/us_news"
                android:id="@+id/us"/>

            <item android:title="@string/australia_news"
                android:id="@+id/aus"/>

        </menu>
    </item>
</menu>